# onnxruntime

./: .gitmodules  reduced_types.config
.gdn/: .gdntsa
cmake/: CMakeLists.txt  onnxruntime.cmake  onnxruntime_common.cmake  onnxruntime_framework.cmake  onnxruntime_graph.cmake  onnxruntime_mlas.cmake  onnxruntime_opschema_lib.cmake  onnxruntime_optimizer.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_session.cmake  onnxruntime_training.cmake  onnxruntime_unittests.cmake  onnxruntime_util.cmake  wil.cmake  winml.cmake
csharp/src/Microsoft.ML.OnnxRuntime/: props.xml
csharp/test/Microsoft.ML.OnnxRuntime.Tests/: InferenceTest.cs  Microsoft.ML.OnnxRuntime.Tests.csproj
csharp/tools/Microsoft.ML.OnnxRuntime.PerfTool/: Microsoft.ML.OnnxRuntime.PerfTool.csproj
dockerfiles/: Dockerfile.migraphx  Dockerfile.rocm  Dockerfile.tensorrt  Dockerfile.training  Dockerfile.vitisai
docs/: ContribOperators.md  OperatorKernels.md
docs/how-to/mobile/: initial-setup.md  limitations.md  model-conversion.md  overview.md  performing-custom-build.md  (+1 more)
docs/resources/: mobile-performance-tuning.md
java/: build.gradle
js/web/: karma.conf.js  package-lock.json  package.json
objectivec/src/: ort_value.mm
onnxruntime/python/: onnxruntime_pybind_state.cc
test_multithreshold/: CMakeLists.txt  multithreshold.cc  multithreshold.h  multithreshold_test.cc
tools/ci_build/: build.py
tools/nuget/: generate_nuspec_for_native_nuget.py
tools/python/: gen_contrib_doc.py  gen_opkernel_doc.py  run_android_emulator.py  run_appium.py
(+178 files in other folders)
